--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fullpage/react-fullpage": "^0.1.40",
     "@metaplex-foundation/js": "^0.18.1",
     "@metaplex-foundation/mpl-token-metadata": "^2.8.3",
+    "@particle-network/auth": "^1.2.2",
     "@solana/wallet-adapter-base": "^0.9.20",
     "@solana/wallet-adapter-react": "^0.15.28",
     "@solana/wallet-adapter-react-ui": "^0.9.27",
     "@solana/wallet-adapter-wallets": "^0.19.11",
     "@solana/web3.js": "^1.73.2",
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
+    "@types/node": "20.10.7",
+    "@types/react": "18.2.47",
     "@types/react-dom": "18.0.8",
     "axios": "^1.2.1",
     "eslint": "8.27.0",
@@ -30,12 +32,12 @@
     "react": "18.2.0",
     "react-color-extractor": "^1.1.2",
     "react-dom": "18.2.0",
-    "typescript": "4.8.4"
+    "typescript": "5.3.3"
   },
   "devDependencies": {
     "@types/lodash.debounce": "^4.0.7",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.4.1"
   }
 }
