--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@solana/wallet-adapter-react-ui": "^0.9.27",
     "@solana/wallet-adapter-wallets": "^0.19.11",
     "@solana/web3.js": "^1.73.2",
+    "@swc/cli": "^0.1.63",
+    "@swc/core": "^1.3.102",
     "@types/node": "20.10.7",
     "@types/react": "18.2.47",
     "@types/react-dom": "18.0.8",
